# httpserver

./: .gitignore  CMakeLists.txt  Doxyfile  build.gradle  build.properties
include/xhttpserver/: api.hpp  config.hpp  connection.hpp  connection_manager.hpp  control.hpp  filter.hpp  handler.hpp  header.hpp  header_parser.hpp  master_redirect.hpp  request.hpp  response.hpp  router.hpp  server.hpp  server_discovery.hpp  static_handler.hpp  thread_pool.hpp
scm/project/: Jenkinsfile  Jenkinsfile_jump  build.yaml
src/demo/: demo.cpp
src/xhttpserver/: connection.cpp  connection_manager.cpp  handler.cpp  header_parser.cpp  server.cpp  server_discovery.cpp  static_handler.cpp
